--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: any
   cached_network_image: ^3.2.3
   url_launcher: ^6.1.10
+  flutter_staggered_grid_view: any
 
 dev_dependencies:
   flutter_test:
